--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "rahikhan",
-    "version": "2.2.2",
-    "author": "Rahi Khan <rahikhan360@gmail.com> (https://rahikhan.gtsb.io)",
-    "description": "A personal card for Rahi Khan",
+    "name": "sahitya",
+    "version": "1.0.0",
+    "author": "Sahitya Nijhawan <sahityanijhawan@gmail.com> (https://sahityanijhawan.vercel.app/)",
+    "description": "A personal card for Sahitya Nijhawan",
     "main": "card.js",
     "bin": "./card.js",
     "repository": {
         "type": "git",
-        "url": "https://github.com/rahi-khan/npx_card.git"
+        "url": "https://github.com/Sahitya777/npx-sahi"
     },
     "scripts": {
         "setup": "ncu -u && npm i",
